# ecmwf_downloader

./: .gitignore  README.md  pyproject.toml  temp.grib  temp.grib.5b7b6.idx
None/: 20240722.grib  downloaded_dates.json
ecmwf_downloader/: __init__.py  download.py  helpers.py  logger_setup.py  postprocess.py  run.py
ecmwf_downloader/config/: config.py
ecmwf_downloader/config/configs/: 2t.yaml  cape.yaml  mean_std.yaml  msl.yaml  ssr.yaml  tcwv.yaml  test_config.yaml  tp.yaml
ecmwf_downloader/configs/: test_config.yaml
workflows/cornjobs/: _cornjob.yaml
workflows/nbs/: 001_init.ipynb  002_generate_config_yaml.ipynb  003_make_date_offset_funciton.ipynb  004_cut_to_area.ipynb
